# zhongchi-ppt-vm-deploy

./: .dockerignore  .env.example  .gitignore  ClaudeCode-PPT预览功能提示词.md  END_TO_END.md  README.md  docker-compose.yml  pyproject.toml  start.ps1  test_empty.pptx  审查全局代码.md  当前Demo交付说明与下一阶段计划.md  技术文档.md  文本解析入库与向量库构建计划.md  计划.md
.github/workflows/: ci.yml
asset_tools/: README.md  pyproject.toml
asset_tools/asset_tools/: __init__.py  catalog.py  cli.py  matcher.py  vector_store.py
asset_tools/tests/: test_assets.py
backend/: Dockerfile  README.md  _diag_test.py  pyproject.toml
backend/scripts/: e2e_demo.py  test_llm_connection.py  verify_e2e_output.py
backend/src/app/: __init__.py  case_matcher.py  chunking.py  constants.py  document_analysis.py  embedding.py  llm.py  m1m2_classifier.py  m3_auto_matcher.py  m5_case_scanner.py  main.py  ppt_generation.py  ppt_preview.py  quality_review.py  schemas.py  storage.py  vector_service.py
backend/src/zhongchi_ppt_backend/: __init__.py
backend/tests/: test_api.py  test_chunking.py  test_embedding.py  test_m3_auto_matcher.py  test_m3_full_api.py  test_m3_image_api.py  test_m3_materials_api.py  test_mineru_pdf.py  test_paddleocr.py  test_ppt_preview.py  test_project_generation.py  test_vector_store.py
data/: README.md  mock_db.json
data/assets/: assets_catalog.json
docker/: README.md
frontend/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
ppt_engine/: README.md  pyproject.toml
workflow/: .gitignore  README.md  pyproject.toml
(+65 files in other folders)
