[project]
name = "zhongchi-ppt-backend"
version = "0.1.0"
description = "FastAPI backend for Zhongchi intelligent PPT demo"
authors = [
    { name = "zm-532", email = "zmxhhm532@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-pptx>=1.0.2",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
zhongchi-ppt-backend = "app.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
